--- a/app/views/site/index.html.haml
+++ b/app/views/site/index.html.haml
@@ -1,1 +1,5 @@
-Site index!
+.hero-unit
+  %h1 Find your next car
+  %p Blurb about finding cars
+  %p
+    %a.btn.btn-primary.btn-large Do something
