--- a/app/views/application/_header.html.haml
+++ b/app/views/application/_header.html.haml
@@ -2,9 +2,9 @@
   .navbar-inner
     .container
       %a.btn.btn-navbar{:'data-toggle' => "collapse", :'data-target' => ".nav-collapse"}
-        %span.icon-bar/
-        %span.icon-bar/
-        %span.icon-bar/
+        %span.icon-bar
+        %span.icon-bar
+        %span.icon-bar
 
       %a.brand{:href => "#"} Autobid
       .nav-collapse
@@ -19,12 +19,13 @@
         %ul.nav.pull-right
           %li
             %a{:href => '#'} Register
-
           %li.divider-vertical
+
           %li.dropdown
             %a.dropdown-toggle{:href => '#', :'data-toggle' => 'dropdown'}
               Login
               %b.caret
+
             %ul.dropdown-menu
               %form.well
                 %li
@@ -32,5 +33,6 @@
                 %li
                   %input{:value => "Password", :type => "password"}
                 %li.divider
+                
                 %li
                   %button.btn.btn-primary{:type => 'submit'} Login
