--- a/app/views/application/_header.html.haml
+++ b/app/views/application/_header.html.haml
@@ -17,23 +17,34 @@
             %a{:href => '#'} Contact
 
         %ul.nav.pull-right
-          - unless @dealer.present?
+          - if current_dealer.present?
+            %li.dropdown
+              %a.dropdown-toggle{:href => '#', :'data-toggle' => 'dropdown'}
+                Logged in as
+                = current_dealer.name
+                %b.caret
+
+              %ul.dropdown-menu
+                %li
+                  = link_to "Logout", logout_path
+
+          - else
             %li
               = link_to "Register", new_dealer_path
             %li.divider-vertical
 
-          %li.dropdown
-            %a.dropdown-toggle{:href => '#', :'data-toggle' => 'dropdown'}
-              Login
-              %b.caret
+            %li.dropdown
+              %a.dropdown-toggle{:href => '#', :'data-toggle' => 'dropdown'}
+                Login
+                %b.caret
 
-            %ul.dropdown-menu
-              %form.well
-                %li
-                  %input{:value => "Username"}
-                %li
-                  %input{:value => "Password", :type => "password"}
-                %li.divider
+              %ul.dropdown-menu
+                %form.well
+                  %li
+                    %input{:value => "Username"}
+                  %li
+                    %input{:value => "Password", :type => "password"}
+                  %li.divider
 
-                %li
-                  %button.btn.btn-primary{:type => 'submit'} Login
+                  %li
+                    %button.btn.btn-primary{:type => 'submit'} Login
