cars controller with stub overview

--- a/app/views/application/_header.html.haml
+++ b/app/views/application/_header.html.haml
@@ -14,6 +14,10 @@
               %i.icon-search
               Search
           %li
+            %a{:href => cars_path}
+              %i.icon-plane
+              My Cars
+          %li
             %a{:href => '#'}
               %i.icon-info-sign
               About
