car creation and listing

--- a/app/views/cars/index.html.haml
+++ b/app/views/cars/index.html.haml
@@ -5,5 +5,13 @@
 - if @cars.empty?
   %h2 You're not selling any cars right now.
   %br
-  
+
   %a.btn.btn-primary{:href => new_car_path} Sell my first car &rarr;
+- else
+  %h2
+    Cars you've got ready to sell
+    %a.btn.btn-success{:href => new_car_path} I've got another!
+
+  %br
+
+  = render :partial => 'car', :collection => @cars
