car auctions stub on list

--- a/app/views/cars/_car.html.haml
+++ b/app/views/cars/_car.html.haml
@@ -21,3 +21,9 @@
           %td
             %strong Mileage
           %td= car.mileage
+
+    .span3
+      %h3
+        Auctions
+
+      Not in any auction right now
