can now create auctions in some form

--- a/app/views/site/index.html.haml
+++ b/app/views/site/index.html.haml
@@ -3,3 +3,5 @@
   %p Blurb about finding cars
   %p
     %a.btn.btn-primary.btn-large Do something
+
+%a.btn.btn-primary{:href => auctions_path} View Auctions &rarr;
