more work to auction page

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -7,3 +7,12 @@ body
 
 .datetime
   width: auto
+
+.auction-timer
+  text-align: center
+
+.auction-timer.almost-finished
+  color: red
+
+.car-hero
+  text-align: center
