--- a/app/views/auctions/index.html.haml
+++ b/app/views/auctions/index.html.haml
@@ -1,11 +1,12 @@
 %h1 Auctions
+%hr
 
 - if not @auctions.empty?
   = render :partial => 'auction', :collection => @auctions
 - elsif dealer?
-  %h3 You don't have any auctions
+  %h2 You're not running any auctions right now
   %br
 
-  %a.btn.btn-primary{:href => new_auction_path} Start a new auction
+  %a.btn.btn-primary{:href => new_auction_path} Auction a car &rarr;
 - else
   %h3 Sorry, but there aren't any cars for you to bid on today
